# cvAutoTrack.Depends

./: CMakeLists.txt  main.cpp
